--- a/ums-client-app/src/web-components/user-dashboard/index.css
+++ b/ums-client-app/src/web-components/user-dashboard/index.css
@@ -22,7 +22,9 @@
     width: 100%;
     padding: 15px;
 }
-
+h1 {
+    border-bottom: 10px solid var(--secondary-light);
+}
 .hidden {
     display: none!important;
 }
