--- a/ums-client-app/src/web-components/user-card/index.css
+++ b/ums-client-app/src/web-components/user-card/index.css
@@ -46,17 +46,19 @@ h1 {
 }
 .controls {
     display: block;
-    text-align: right;
+    text-align: center;
     width: 100%;
 }
 a.btn, a.btn:active, a.btn:visited {
-    display: block;
+    display: inline-block;
     margin: 0px;
     margin-bottom: 2px;
     padding: 10px 19px;
     text-decoration: none;
     background: var(--primary-light);
     transition: 0.4s all;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .btn:hover {
     background: var(--secondary-light);
@@ -74,8 +76,10 @@ a.btn, a.btn:active, a.btn:visited {
         width: 50%;
     }
     a.btn, a.btn:active, a.btn:visited {
-        display: inline-block;
         width: auto;
         margin-left: 10px;
+        font-size: 16px;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 }
