--- a/ums-client-app/src/web-components/user-form/index.css
+++ b/ums-client-app/src/web-components/user-form/index.css
@@ -1,18 +1,8 @@
-:host {
-    width: auto;
-    display: flex;
-    flex-direction: row;
-}
-
 .container {
     width: auto;
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-    background-color: var(--main-bg-color);
-}
-.email {
-    font-size: 18px;
-    color: #66aaf1;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--primary-lighter);
 }
