Form Updates Page Footer

--- a/ums-client-app/src/styles/index.less
+++ b/ums-client-app/src/styles/index.less
@@ -12,6 +12,11 @@ body {
     letter-spacing: 0.1ch;
     line-height: 1.4;
     color: @primary-dark;
+    margin-bottom: 0px;
+    
+    @media only screen and (min-width: 768px) {        
+        margin-bottom: 200px;
+    }
 }
 
 .container-fluid {
