--- a/ums-client-app/src/styles/variables.less
+++ b/ums-client-app/src/styles/variables.less
@@ -12,7 +12,7 @@
 @success: green;
 @warning: orange;
 @info: rgb(164, 211, 226);
-
+@shadow: rgb(230, 230, 230);
 @font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 @font-size: 1em;
 @font-size-small: 0.8em;
@@ -33,7 +33,7 @@
 --success: @success;
 --warning: @warning;
 --info: @info;
-
+--shadow: @shadow;
 --font-family: @font-family;
 --font-size: @font-size;
 --font-size-small: @font-size-small;
